2012-01-03  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	Add missing return value, flagged by 'make test'.

	* include/gdiplus/gdiplustypes.h (Gdiplus::GdiplusAbort::Abort):
	Return NO_ERROR in virtual definition.

2012-01-03  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	Remove duplicate definitions, identified by 'make test'.

	* include/wincrypt.h (CRYPT_NEWKEYSET, CRYPT_DELETEKEYSET)
	(CRYPT_MACHINE_KEYSET, CRYPT_EXPORTABLE, CRYPT_USER_PROTECTED)
	(CRYPT_SILENT, CRYPT_CREATE_SALT, CRYPT_UPDATE_KEY, CRYPT_NO_SALT)
	(CRYPT_PREGEN, CRYPT_RECIPIENT, CRYPT_INITIATOR, CRYPT_ONLINE)
	(CRYPT_SF, CRYPT_CREATE_IV, CRYPT_KEK, CRYPT_DATA_KEY)
	(CRYPT_VOLATILE, CRYPT_SGCKEY): Delete second instance of each.

	* include/winerror.h (CRYPT_E_REVOKED): Delete; it is already
	correctly defined (per MSDN) in <wincrypt.h>

2012-01-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct misuse of #ifdef, identified by 'make test'.

	* include/shlwapi.h (enum ASSOCSTR, enum ASSOCDATA): Fix typos;
	/#ifdef _WIN32_IE >= 0x0600/s/#ifdef/#if/

2011-12-22  Corinna Vinschen  <corinna@vinschen.de>

	Replace more incorrectly named manifest constants.

	* include/winnt.h (JOB_OBJECT_LIMIT_BREAKAWAY_OK)
	(JOB_OBJECT_LIMIT_SILENT_BREAKAWAY_OK): Define; make aliases for...
	(JOB_OBJECT_BREAKAWAY_OK, JOB_OBJECT_SILENT_BREAKAWAY): ...these old
	definitions respectively; retain for backward compatibility only.

2011-12-22  Corinna Vinschen  <corinna@vinschen.de>

	Add missing PROCESS_QUERY_LIMITED_INFORMATION.

	* include/winnt.h (PROCESS_QUERY_LIMITED_INFORMATION): Define it.

2011-08-19  Corinna Vinschen  <corinna@vinschen.de>

	Add missing MAPVK manifest constant definitions.

	* include/winuser.h (MAPVK_VK_TO_VSC, MAPVK_VSC_TO_VK): Define them.
	(MAPVK_VK_TO_CHAR, MAPVK_VSC_TO_VK_EX, MAPVK_VK_TO_VSC_EX): Likewise.

2011-08-05  Corinna Vinschen  <corinna@vinschen.de>

	Correct some misspelled manifest constant names.

	* include/winnt.h (IMAGE_DLL_CHARACTERISTICS_NX_COMPAT): Should be...